# InterAgentFramework

./: .gitignore  AGENTS.md  AI_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  hub-image.yml
.interagent/: README.md
examples/: README.md  basic_workflow.py  cli_session.bat  cli_session.sh  parallel_workflow.py
hub/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.build.yml  docker-compose.yml  pyproject.toml
hub/hub/: __init__.py  auth.py  config.py  main.py  mcp_server.py  sse.py  utils.py
hub/hub/api/v1/: __init__.py  agents.py  events.py  logs.py  messages.py  questions.py  status.py  tasks.py
hub/hub/db/: engine.py  models.py
hub/hub/migrations/: env.py
hub/hub/schemas/: agents.py  common.py  logs.py  messages.py  questions.py  tasks.py
hub/tests/: conftest.py  test_auth.py  test_messages.py  test_questions.py  test_sse.py  test_status.py  test_tasks.py
hub/ui/src/: App.tsx
hub/ui/src/api/: agents.ts  client.ts  logs.ts  messages.ts  questions.ts  status.ts  tasks.ts
hub/ui/src/components/activity/: EventRow.tsx
hub/ui/src/components/agents/: AgentCard.tsx  AgentTimeline.tsx  AgentsPage.tsx
hub/ui/src/components/layout/: Sidebar.tsx
hub/ui/src/components/logs/: LogLine.tsx  LogsView.tsx
hub/ui/src/components/messages/: ConversationGroup.tsx  MessagesFeed.tsx
hub/ui/src/hooks/: useSSE.ts
hub/ui/src/lib/: eventSummary.ts
hub/ui/src/store/: configStore.ts
src/agentweave/: __init__.py  cli.py  constants.py  eventlog.py  locking.py  messaging.py  session.py  task.py  utils.py  validator.py  watchdog.py
src/agentweave/mcp/: __init__.py  server.py
src/agentweave/templates/: __init__.py  agents_guide.md  ai_context.md  roles_template.md  task_delegation.md  update_prompt.md
src/agentweave/transport/: __init__.py  base.py  config.py  git.py  http.py  local.py
src/interagent/: __init__.py  cli.py  constants.py  locking.py  messaging.py  session.py  task.py  utils.py  validator.py  watchdog.py
src/interagent/templates/: __init__.py  agents_guide.md  review_request.md  task_delegation.md
tests/: test_http_transport.py  test_locking.py  test_messaging.py  test_session.py  test_task.py  test_transport_local.py  test_utils.py  test_validator.py
