[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interagent"
version = "0.1.0"
description = "A framework for Claude Code and Kimi Code collaboration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "InterAgent Team"},
]
keywords = ["claude", "kimi", "collaboration", "agents", "ai", "code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Tools",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/interagent"
Documentation = "https://github.com/yourusername/interagent#readme"
Repository = "https://github.com/yourusername/interagent"
Issues = "https://github.com/yourusername/interagent/issues"

[project.scripts]
interagent = "interagent.cli:main"
iaf = "interagent.cli:main"
interagent-watch = "interagent.watchdog:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
interagent = ["templates/*", "assets/*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
