[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interagent-framework"
version = "0.1.0"
description = "A framework for Claude Code and Kimi Code collaboration"
readme = "README.md"
license = "MIT"
authors = [
    {name = "gutohuida"},
]
keywords = ["claude", "kimi", "collaboration", "agents", "ai", "code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/gutohuida/InterAgentFramework"
Documentation = "https://github.com/gutohuida/InterAgentFramework#readme"
Repository = "https://github.com/gutohuida/InterAgentFramework"
Issues = "https://github.com/gutohuida/InterAgentFramework/issues"
Changelog = "https://github.com/gutohuida/InterAgentFramework/blob/master/CHANGELOG.md"

[project.scripts]
interagent = "interagent.cli:main"
iaf = "interagent.cli:main"
interagent-watch = "interagent.watchdog:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
interagent = ["templates/*", "assets/*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
