[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentweave-hub"
version = "0.1.0"
description = "AgentWeave Hub — self-hosted FastAPI server for multi-agent collaboration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "fastmcp>=2.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
agentweave-hub = "hub.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["hub*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
